tests/NormalTests/paczka2/big_fuzzy/58383343.err
Error in line 2: JOwfLkR0a A970 75,8
Error in line 13: M3jZuPlYg3 A297 73,9
Error in line 3: A970 A60 10,2
Error in line 20: A970 A297 86,4
Error in line 46: JOwfLkR0a S686 8,4
Error in line 25: C30s A297 81,2
Error in line 53: Ar70 A2r7 51,3
Error in line 56: M3jZuPlYg3 A970 56,77
Error in line 55: M3jZuPlYg3 A60 95,8
Error in line 49: C30s S686 1,6
Error in line 52: Ndr A297 17,6
Error in line 44: A970 A297 41,7
Error in line 68: Ndr A60 94,4
Error in line 71: A970 A970 95,4
Error in line 79: A970 S686 21,6
Error in line 86: M3jZuPlYg3 S686 76,2
Error in line 81: A970 A297 84,9
Error in line 74: rzZQmNcI5c3 A297 76,5
Error in line 87: M3jZuPlYg3 A60 60,7
Error in line 92: M3jZuPlYg3 S686 63,9
Error in line 102: A970 S686 19,2
Error in line 116: Ndr S686 83,7
Error in line 121: A970 A60 111,73
Error in line 120: Ndr A60 34,2
Error in line 125: M3jZuPlYg3 A297 88,5
Error in line 103: A970 A60 25,4
Error in line 132: A970 A297 19,1
Error in line 130: C30s A970 14,9
Error in line 136: C30s A297 84,6
Error in line 137: M3jZuPlYg3 A60 23,4
Error in line 140: C30s A297 66,1
Error in line 143: C30s A60 7,7
Error in line 153: JOwfLkR0a A297 90,30
Error in line 155: rzZQmNcI5c3 S686 -1,4
Error in line 148: rzZQmNcI5c3 S686 60,7
Error in line 150: JOwfLkR0a S686 254,0
Error in line 165: JOwfLkR0a A297 13,5
Error in line 174: Ndr A970 16,8
Error in line 191: A970 S686 76,3
Error in line 203: Ndr A297 91,2
Error in line 204: A970 A60 38,8
Error in line 207: Ndr A60 72,8
Error in line 219: M3jZuPlYg3 A297 74,1
Error in line 216: Ndr A297 36,9
Error in line 218: C30s A970 94,7
Error in line 221: Ndr S686 16,6
Error in line 230: M3jZuPlYg3 A60 218, 
Error in line 224: C30s A60 14,7
Error in line 234: Ndr A297 74,5
Error in line 235: C30s A970 89,3
Error in line 238: C30s A297 66,3
Error in line 237: Ndr S686 68,1
Error in line 220: M3jZuPlYg3 A60 69,5
Error in line 246: Ndr A60 78,8
